Fixed issue with margin on cta-text causing horizontal scrollbar to reappear just before swapping to tablet width media query.

--- a/css/index.css
+++ b/css/index.css
@@ -270,7 +270,7 @@ header .logo {
   justify-content: center;
   flex-flow: column;
   align-items: center;
-  margin: 0 10% 0 0;
+  margin: 0 8% 0 0;
   max-width: 80%;
   max-height: 80%;
 }
