--- a/less/cta.less
+++ b/less/cta.less
@@ -21,7 +21,7 @@
         justify-content: center;
         flex-flow: column;
         align-items: center;
-        margin: 0 10% 0 0;
+        margin: 0 8% 0 0;
         max-width: 80%;
         max-height: 80%;
         @media @tablet {
